# django-admiral

./: .coveragecc  .gitignore  README.md  app.py  lib.py  pyproject.toml  requirements-all.txt  setup.py
.github/workflows/: test.yml
core/core/: settings.py
core/yourapp/: admin.py  models.py  tests.py
core/yourapp/migrations/: 0001_initial.py
django_admin_tester/: __init__.py  apps.py  browsers.py  decorators.py  exceptions.py  mixins.py  settings.py  utils.py
